new drag and drop concept

--- a/CardPatterns.html
+++ b/CardPatterns.html
@@ -835,7 +835,7 @@
         return this.state.activeSlot;
       },
 
-      getActiveSlot: function() {
+      getActiveCard: function() {
         //TODO: some precondition that it cant be preplaced?
         return this.state.data[getActiveSlotIndex];
       },
